--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         However, I worked mostly as a Web Developer.
     </p>
     <p>
-        Please let me know your precious comments, observations, and suggestions.<br>
-        <a href="https://github.com/heminsatya" target="_blank">GitHub</a><br>
-        <a href="https://twitter.com/heminsatya" target="_blank">Twitter</a><br>
+        Please let me know your precious comments, observations, and suggestions.
+        (<a href="https://github.com/heminsatya" target="_blank">GitHub</a>)
+        (<a href="https://twitter.com/heminsatya" target="_blank">Twitter</a>)
     </p>
     <p>
         Thanks for visiting my webpage.
